Some refactoring and clean up...

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,11 +1,22 @@
 {
+  "node": true,
   "browser": true,
   "esnext": true,
-  "globalstrict": true,
-  "quotmark": true,
+  "bitwise": true,
+  "camelcase": true,
+  "curly": true,
+  "eqeqeq": true,
+  "immed": true,
+  "indent": 2,
+  "latedef": false,
+  "newcap": false,
+  "noarg": true,
+  "quotmark": "single",
+  "regexp": true,
   "undef": true,
   "unused": true,
-  "node": true,
-  "newcap": false,
-  "globals": {},
+  "strict": true,
+  "trailing": true,
+  "smarttabs": true,
+  "globals": {}
 }
